prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_hanging_missed_ccurvy.diag.txt
ERROR: unfinished string
testData/diagnostics/interp_str_hanging_missed_ccurvy.nut:3:16

println($"{foo()")
                ^-


